<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:drawableStart="@drawable/ic_arrow_back"
            android:text="@string/back"
            android:textColor="@color/primaryColor"
            android:textSize="@dimen/_18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_flatNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:hint="@string/flat_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_back"
            app:startIconDrawable="@drawable/ic_flat"
            app:startIconTint="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_flatNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="2" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_ownerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="@dimen/_20dp"
            android:hint="@string/owner_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_flatNumber"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ownerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_contactNumberOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:hint="@string/primary_contact_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_ownerName"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_primaryNumber"
                style="@style/NumberInputFiledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_contactNumberTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:hint="@string/additional_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_contactNumberOne"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_additionalNumberOne"
                style="@style/NumberInputFiledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_contactNumberThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:hint="@string/additional_number_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tl_contactNumberTwo"
            app:startIconDrawable="@drawable/ic_phone"
            app:startIconTint="@color/primaryColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_additionalNumberTwo"
                style="@style/NumberInputFiledStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:background="@drawable/bg_button_disabled"
            android:text="@string/save_btn"
            app:layout_constraintStart_toStartOf="@id/tl_contactNumberThree"
            app:layout_constraintTop_toBottomOf="@id/tl_contactNumberThree" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>