<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_curved_around"
    android:padding="@dimen/_20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_paymentMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_payment"
        android:text="@string/select_payment_mode"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_paymentMode"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60dp"
        android:layout_marginTop="@dimen/_5dp"
        android:background="@drawable/bg_text_view_purple"
        android:paddingStart="@dimen/_8dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_paymentMode" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_paymentHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50dp"
        android:drawableStart="@drawable/ic_flat"
        android:text="@string/amount"
        android:textColor="@color/purple_200"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner_paymentMode" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_paymentAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:padding="@dimen/_20dp"
        android:textColor="@color/grey"
        android:textSize="@dimen/_18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_paymentHeader" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_paymentAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10dp"
        android:background="@drawable/bg_text_view_purple"
        android:hint="@string/hint_amount"
        android:inputType="number"
        android:padding="@dimen/_20dp"
        android:textColor="@color/grey"
        android:textSize="@dimen/_18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_paymentHeader" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_paymentHeader" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_pay"
        style="@style/ButtonDisabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30dp"
        android:drawableStart="@drawable/ic_done_red"
        android:text="@string/pay"
        app:layout_constraintEnd_toEndOf="@id/et_paymentAmount"
        app:layout_constraintStart_toStartOf="@id/et_paymentAmount"
        app:layout_constraintTop_toBottomOf="@id/cg_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>